ajout d'une class Niveau et de la methode remetAliens()